# cloud-course-project

./: Makefile  pyproject.toml  run.sh
notebooks/: cloud-course-project.code-workspace  hw__learn_s3_client.ipynb  hw__learn_s3_client__answer_key.ipynb
section-1--boto3/: README.md
section-1--boto3/section-2--boto3/: pyproject.toml  run.sh
section-1--boto3/section-3--testing-boto3/lab--implement-tests/: pyproject.toml
section-1--boto3/section-3--testing-boto3/lab--implement-tests/src/files_api/s3/: delete_objects.py  write_objects.py
section-1--boto3/section-3--testing-boto3/lab--implement-tests/tests/: consts.py
section-1--boto3/section-3--testing-boto3/lab--implement-tests/tests/fixtures/: aws.py  mocked_aws.py
section-1--boto3/section-3--testing-boto3/lab--implement-tests/tests/unit_tests/s3/: test__delete_objects.py  test__read_objects.py  test__write_objects.py
section-1--boto3/section-3--testing-boto3/lab-implement-tests--answer-key/: .gitignore  pyproject.toml  run.sh
section-2--rest-apis/1--rest-endpoints-happy-path/: api-checklist.md  lab-instructions.md  unofficial-rest-standards.md
section-2--rest-apis/1--rest-endpoints-happy-path/lab/: Makefile  run.sh
section-2--rest-apis/1--rest-endpoints-happy-path/lab--answer-key/: pyproject.toml
section-2--rest-apis/2--create-app-design-pattern/: 12-factor-app-checklist.md
section-2--rest-apis/2--create-app-design-pattern/desired-state/: run.sh
section-2--rest-apis/3--error-handling-and-data-validation/: api-checklist.md
section-2--rest-apis/3--error-handling-and-data-validation/desired-state/: pyproject.toml
section-2--rest-apis/4--api-contracts-and-docs/: api-checklist.md
section-2--rest-apis/5--open-ai-endpoint/: .gitignore  lab.md
src/files_api/: main.py  s3.py
tests/: conftest.py  consts.py
tests/fixtures/: mocked_aws.py
(+73 files in other folders)
